--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-    function App() {
+    function MinutesToHours() {
         const [amount, setAmount] = React.useState(0);
         const [inverted, setInverted] = React.useState(false);
         const onChange = (event) => {
@@ -20,7 +20,6 @@
         };
         return (
             <div>
-                <h1 className="hi">Super Converter</h1>
                 <label htmlFor="amount">Minutes</label>
                 <input
                     value={inverted ? amount * 60 : amount}
@@ -43,6 +42,66 @@
                 <button onClick={onInvert}>{inverted ? "Turn back" : "Invert"}</button>
             </div>
 
+        );
+    }
+    function KmToMiles(){
+        const [amount, setAmount] = React.useState(0);
+        const [inverted, setInverted] = React.useState(false);
+        const onChange = (event) => {
+            setAmount(event.target.value);
+        };
+        const reset = () => setAmount(0);
+        const onInvert = () => {
+            reset();
+            setInverted((current) => !current);
+        };
+        return (
+            <div>
+                <label htmlFor="amount">Miles</label>
+                <input
+                    value={inverted ? amount * 0.621371 : amount}
+                    id="Miles"
+                    placeholder="Miles"
+                    type="number"
+                    onChange={onChange}
+                    disabled={inverted}
+                     />
+                <label htmlFor="hours">Km</label>
+                <input
+                    value={inverted ? amount: (amount / 1.609).toPrecision(4)}
+                    id="Km"
+                    placeholder="Km"
+                    type="number"
+                    disabled={!inverted }
+                    onChange={onChange}
+                />
+                <button onClick={reset}>Reset</button>
+                <button onClick={onInvert}>{inverted ? "Turn back" : "Invert"}</button>
+            </div>
+
+        );
+    }
+
+    function App() {
+        const [index, setIndex] = React.useState("xx");
+        
+        const onSelect = (event) =>{
+            setIndex(event.target.value);
+        };
+        console.log("render/w", index)
+        return (
+            <div>
+                <h1 >Super Converter</h1>
+                <select value={index} onChange={onSelect}>
+                    <option value="xx">Select your units</option>
+                    <option value="0"> Minutes & Hours </option>
+                    <option value="1"> Km & Miles </option>
+                </select>
+                <hr />
+                {index ==="xx" ? "Please select your units" : null}
+                {index === "0" ? <MinutesToHours/> : null}
+                {index ==="1"? <KmToMiles />: null}
+            </div>
         );
     }
     const root = document.getElementById("root");
