--- a/index.html
+++ b/index.html
@@ -81,26 +81,29 @@
 
         );
     }
-
+    function Btn({text, onClick}){
+        console.log(text, "was rendered");
+        return (
+            <button 
+            onClick={onClick}
+            style={{
+            backgroundColor: "tomato",
+            color: "white",
+            padding:"10px 20px",
+            border:0,
+            borderRadius: 10,
+        }}>{text}
+        </button>
+        );
+    };
+    const MemorizedBtn = React.memo(Btn)
     function App() {
-        const [index, setIndex] = React.useState("xx");
-        
-        const onSelect = (event) =>{
-            setIndex(event.target.value);
-        };
-        console.log("render/w", index)
+        const [value, setValue] = React.useState("Save Changes");
+        const changeValue = () => setValue("Revert Changes");
         return (
             <div>
-                <h1 >Super Converter</h1>
-                <select value={index} onChange={onSelect}>
-                    <option value="xx">Select your units</option>
-                    <option value="0"> Minutes & Hours </option>
-                    <option value="1"> Km & Miles </option>
-                </select>
-                <hr />
-                {index ==="xx" ? "Please select your units" : null}
-                {index === "0" ? <MinutesToHours/> : null}
-                {index ==="1"? <KmToMiles />: null}
+                <MemorizedBtn text={value} onClick={changeValue} />
+                <MemorizedBtn text="Continue"  />
             </div>
         );
     }
